[package]
name = "mos6502"
version = "0.1.1"
description = "A interpreter/disassembler for MOS 6502."
keywords = ["interpreter", "disassembler", "6502"]
license = "MIT"
authors = ["韩朴宇 <w12101111@gmail.com>"]
repository = "https://github.com/12101111/6502"
homepage = "https://github.com/12101111/6502"
edition = "2018"

[dependencies]
bitflags = "1"
log = { version = "0.4", default-features = false }

[features]
disasm = [] 
